--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="shortcut icon" href="/public/favicon.ico">
     <title>React SSR</title>
     <!--react-ssr-head-->
+    <script>
+    <!--react-redux-data-->
+    </script>
 </head>
 <body>
     <div id="app"><!--react-ssr-outlet--></div>
