--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <!--react-ssr-head-->
 </head>
 <body>
-    <div id="app"><!--react-ssr-outlet--></div>
+    <!--react-ssr-outlet-->
 </body>
 </html>
